--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 logging.file=/home/sang/workspace/log.log
 logging.level.org.springframework.web=debug
+
+server.port=8081
+#\u914D\u7F6E\u670D\u52A1\u5668\u7AEF\u53E3\uFF0C\u9ED8\u8BA4\u4E3A8080
+#server.session-timeout=1000000#\u7528\u6237\u56DE\u8BDDsession\u8FC7\u671F\u65F6\u95F4\uFF0C\u4EE5\u79D2\u4E3A\u5355\u4F4D
+#server.context-path=/index#\u914D\u7F6E\u8BBF\u95EE\u8DEF\u5F84\uFF0C\u9ED8\u8BA4\u4E3A/
+#server.tomcat.uri-encoding=UTF-8#\u914D\u7F6ETomcat\u7F16\u7801\uFF0C\u9ED8\u8BA4\u4E3AUTF-8
+#server.tomcat.compression=on#Tomcat\u662F\u5426\u5F00\u542F\u538B\u7F29\uFF0C\u9ED8\u8BA4\u4E3A\u5173\u95ED
+
+#\u6DFB\u52A0https\u652F\u6301
+server.ssl.key-store=D:/projectSpace/boot-app/src/main/resources/keystore.p12
+server.ssl.key-store-password=123456
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias:tomcat
